--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
             Hello computer
         </h1>
     </header>
+    <main>
+        <h2>
+            Main section
+        </h2>
+        <p>
+            Use only this one
+        </p>
+    </main>
 </body>
 </html>
